# ZettelkastenWiki

./: .ai_state.md  .gitignore  CLAUDE.md  LICENSE  README.md  changelog.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
example/: build.py  example_site.py
example/wiki/de/: erste-schritte.md
example/wiki/faq/: quiz-demo.md  what-is-this.md
example/wiki/guides/: getting-started.md  writing-notes.md
tests/: conftest.py  test_autolink.py  test_catalog.py  test_defaults_layer.py  test_markdown.py  test_memory_features.py  test_og.py  test_publish_safety.py  test_quiz.py  test_recency_backlinks.py  test_site_invariants.py  test_status_home.py
zettelkastenwiki/: __init__.py  catalog.py  config.py  jsonld.py  markdown.py  og.py  quiz.py  shell.py  site.py  testing.py
